# testgen

./: .gitignore  README.md  login_20cases.xlsx  login_gui_test.xlsx  login_test.xlsx  login_test_cases.xlsx  pyproject.toml  reasonix.toml  requirements.txt  sample_api.yaml  testgen.spec
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/attachments/: clipboard-20260710-101908.758651-000001.xlsx
testgen/: __init__.py  __main__.py  cli.py  orchestrator.py
testgen/core/: base.py  models.py
testgen/generators/: generator.py  llm_client.py  prompt_builder.py  template_engine.py
testgen/outputs/: excel_adapter.py  json_adapter.py  pytest_adapter.py
testgen/parsers/: code_parser.py  natural_lang_parser.py  openapi_parser.py
testgen/web/: gui.py  launcher.py  server.py
testgen/web/static/: index.html
user_data/docs/: V1.0.0_TestGen设计文档.md
